Cleaned up project files. Refactored tests to use new interfaces.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "hmmm-node",
+  "name": "hmmm-js",
   "version": "0.0.0",
   "description": "Javascript implementation of the Harvey Mudd Miniature Machine language.",
-  "main": "assemble_hmmm.js",
   "dependencies": {
-    "StringScanner": "^0.0.3",
-    "split": "^0.3.0",
-    "through": "^2.3.4"
   },
   "devDependencies": {
     "chai": "^1.9.1"
